--- a/sites/all/themes/rebound/sass/_views.scss
+++ b/sites/all/themes/rebound/sass/_views.scss
@@ -802,7 +802,7 @@
         margin-top: 20px;
     }
     
-    .views-field-field-photos ul
+    .view-content ul
     {
         list-style: none;
         margin: 0;
