Better vertically centre the home header circle
close #11

--- a/sites/all/themes/rebound/sass/_responsive.scss
+++ b/sites/all/themes/rebound/sass/_responsive.scss
@@ -906,7 +906,7 @@
         }
     }
     
-    body.front #block-block-12>.content
+    body.front #block-block-12>.content>div
     {
         width: 280px;
         height: 280px;
