--- a/sites/all/themes/rebound/sass/_front.scss
+++ b/sites/all/themes/rebound/sass/_front.scss
@@ -40,30 +40,35 @@ body.front
         
         & > .content
         {
-            background: $blue-medium;
-            background: rgba(27,117,188, 0.69);
-            width: 286px;
-            height: 286px;
-            padding: 40px;
-            border-radius: 183px;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            margin-top: -183px;
-            margin-left: -183px;
-            text-align: center;
-            font-size: 2em;
-            line-height: 100%;
-            text-shadow: 1px 1px 2px rgba(0,0,0, 0.3);
+            position: relative;
             
-            -ms-behavior: url(/sites/all/themes/rebound/css/PIE.htc);
-            
-            img
+            & > div
             {
-                height: 99px !important;
-                width: auto !important;
-                display: block;
-                margin: 10px auto 20px auto;
+                background: $blue-medium;
+                background: rgba(27,117,188, 0.69);
+                width: 286px;
+                height: 286px;
+                padding: 40px;
+                border-radius: 183px;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                margin-top: -183px;
+                margin-left: -183px;
+                text-align: center;
+                font-size: 2em;
+                line-height: 100%;
+                text-shadow: 1px 1px 2px rgba(0,0,0, 0.3);
+                
+                -ms-behavior: url(/sites/all/themes/rebound/css/PIE.htc);
+                
+                img
+                {
+                    height: 99px !important;
+                    width: auto !important;
+                    display: block;
+                    margin: 10px auto 20px auto;
+                }
             }
         }
     }
