Fix position of 2nd red circle for tablet sizes
close #23

--- a/sites/all/themes/rebound/sass/_front.scss
+++ b/sites/all/themes/rebound/sass/_front.scss
@@ -172,7 +172,7 @@ body.front
 .view-red-circles.view-display-id-block_2 .views-row
 {
     top: 2250px;
-    left: 600px;
+    right: 60px;
     bottom: auto;
 }
 .view-photo-circles .views-row-1
