--- a/sites/all/themes/rebound/sass/_main.scss
+++ b/sites/all/themes/rebound/sass/_main.scss
@@ -253,7 +253,8 @@ body.contact-us
                 
                 &:hover
                 {
-                    text-decoration: underline;
+                    border-bottom: 1px solid white;
+                    margin-bottom: -1px;
                 }
             }
         }
