--- a/sites/all/themes/rebound/sass/_views.scss
+++ b/sites/all/themes/rebound/sass/_views.scss
@@ -93,7 +93,7 @@
         top: 0;
         width: 100%;
         height: 100%;
-        z-index: 100;
+        z-index: 2;
         font-size: 0;
         text-decoration: none;
     }
@@ -283,11 +283,12 @@
             color: white;
             text-decoration: none;
             font-weight: bold;
-            line-height: 175%;
+            margin: 6px 0;
             
             &:hover
             {
-                text-decoration: underline;
+                border-bottom: 1px solid white;
+                margin-bottom: 5px;
             }
         }
         .btn-all-programs
@@ -545,6 +546,11 @@
         text-transform: uppercase;
         margin-bottom: 5px;
         
+        h2
+        {
+            display: inline-block;
+        }
+        
         a
         {
             color: white;
@@ -553,7 +559,8 @@
             
             &:hover
             {
-                text-decoration: underline;
+                border-bottom: 2px solid white;
+                margin-bottom: -2px;
             }
         }
     }
@@ -605,7 +612,8 @@
             
             &:hover
             {
-                text-decoration: underline;
+                border-bottom: 1px solid white;
+                margin-bottom: -1px;
             }
         }
     }
@@ -705,7 +713,8 @@
             
             &:hover
             {
-                text-decoration: underline;
+                border-bottom: 1px solid white;
+                margin-bottom: -1px;
             }
         }
     }
@@ -784,7 +793,8 @@
             
             &:hover, &:focus
             {
-                text-decoration: underline;
+                border-bottom: 2px solid white;
+                margin-bottom: -2px;
             }
         }
     }
@@ -912,10 +922,11 @@
     .views-field-title
     {
         font-size: 2.25em;
-        text-decoration: underline;
         font-weight: bold;
         text-transform: uppercase;
         margin-bottom: 5px;
+        border-bottom: 3px solid white;
+        display: inline-block;
     }
     .views-field-field-subtitle
     {
@@ -1085,10 +1096,11 @@
     .views-field-title
     {
         font-size: 2.5em;
-        text-decoration: underline;
         text-transform: uppercase;
         font-weight: bold;
         margin-bottom: 10px;
+        border-bottom: 4px solid white;
+        display: inline-block;
     }
     
     .views-field-nothing-1
@@ -1143,7 +1155,8 @@
         
         &:hover
         {
-            text-decoration: underline;
+            border-bottom: 1px solid white;
+            margin-bottom: -1px;
         }
     }
 }
