Back to Events button on the calendar page
close #19

--- a/sites/all/themes/rebound/sass/_main.scss
+++ b/sites/all/themes/rebound/sass/_main.scss
@@ -470,6 +470,14 @@ body.calendar
         #block-system-main
         {
             margin-right: 0;
+            overflow: visible;
+            
+            .button
+            {
+                position: absolute;
+                top: -70px;
+                right: 0;
+            }
         }
     }
 }
