--- a/sites/all/themes/rebound/sass/_responsive.scss
+++ b/sites/all/themes/rebound/sass/_responsive.scss
@@ -348,6 +348,11 @@
     {
         display: none;
     }
+    
+    body.calendar .region-content #block-system-main .button
+    {
+        display: none;
+    }
 }
 
 
