--- a/sites/all/themes/rebound/sass/_views.scss
+++ b/sites/all/themes/rebound/sass/_views.scss
@@ -47,7 +47,6 @@
         {
             display: none;
         }
-        
         .views-field-body
         {
             display: block;
@@ -61,10 +60,8 @@
         line-height: 85%;
         font-weight: bold;
         font-size: 0.9em;
-        position: relative;
-        z-index: 0;
         
-        .read-more
+        .read-more a
         {
             color: white;
             display: inline-block;
@@ -72,6 +69,10 @@
             text-decoration: none;
             padding-right: 18px;
             background: url(../img/chevron-right.png) no-repeat right center;
+            position: static;
+            font-size: inherit;
+            width: auto;
+            height: auto;
         }
     }
     .views-field-title
@@ -86,14 +87,14 @@
         padding-bottom: 3px;
     }
     
-    .views-field-field-link a
+    .views-field-field-link
     {
         position: absolute;
         left: 0;
         top: 0;
         width: 100%;
         height: 100%;
-        z-index: 2;
+        z-index: 10;
         font-size: 0;
         text-decoration: none;
     }
@@ -474,8 +475,6 @@
             display: block;
             border-radius: 59px;
             border: 2px solid white;
-            
-            behavior: url(/sites/all/themes/rebound/css/PIE.htc);
         }
     }
 }
