Make content links white, then blue on hover
close #30

--- a/sites/all/themes/rebound/sass/_main.scss
+++ b/sites/all/themes/rebound/sass/_main.scss
@@ -6,7 +6,12 @@ body
 
 a
 {
-    color: $blue-light;
+    color:white;
+    
+    &:hover, &:focus
+    {
+        color: $blue-light;
+    }
 }
 
 .button
