--- a/sites/all/themes/rebound/sass/_responsive.scss
+++ b/sites/all/themes/rebound/sass/_responsive.scss
@@ -908,3 +908,66 @@
         }
     }
 }
+
+
+@media screen and (max-width: 360px) and (max-height: 560px)
+{
+    .navigation
+    {
+        height: 80px;
+        
+        .logo
+        {
+            height: 80px;
+            
+            &:after
+            {
+                border-width: 40px 0 40px 33px;
+            }
+            
+            img
+            {
+                height: 60px;
+                width: auto;
+            }
+        }
+        
+        .region-navigation
+        {
+            top: 80px;
+        }
+        
+        .btn-menu
+        {
+            height: 80px;
+        }
+    }
+    #block-system-main-menu .content ul a
+    {
+        height: 48px;
+    }
+    .navigation .social
+    {
+        height: 48px;
+        padding-top: 8px;
+    }
+}
+@media screen and (max-width: 360px) and (max-height: 450px)
+{
+    #block-system-main-menu .content ul a
+    {
+        height: 38px;
+        font-size: 1em;
+    }
+    .navigation .social
+    {
+        height: 46px;
+        padding-top: 6px;
+        
+        .content a
+        {
+            width: 30px;
+            height: 30px;
+        }
+    }
+}
