Fix the volunteer circle not clickable (mobile)
close #42

--- a/sites/all/themes/rebound/sass/_responsive.scss
+++ b/sites/all/themes/rebound/sass/_responsive.scss
@@ -907,6 +907,15 @@
             font-size: 2.25em;
         }
     }
+    
+    .view-primary-circles,
+    .view-secondary-circles,
+    {
+        .views-row
+        {
+            float: none !important;
+        }
+    }
 }
 
 
