--- a/sites/all/themes/rebound/sass/_views.scss
+++ b/sites/all/themes/rebound/sass/_views.scss
@@ -1501,9 +1501,9 @@
         text-transform: uppercase;
         font-weight: bold;
         border-bottom: 4px solid white;
-        width: 200px;
-        float: left;
-        margin-right: 75px;
+        overflow: hidden;
+        display: inline-block;
+        margin-bottom: 1em;
         
         h2
         {
@@ -1519,9 +1519,8 @@
         border-radius: 100px;
         border: 4px solid white;
         float: left;
-        margin-top: 25px;
         clear: left;
-        margin-right: 87px;
+        margin-right: 50px;
     }
     
     .views-field-body
@@ -1534,7 +1533,7 @@
             display: block;
             position: absolute;
             top: 0;
-            left: 244px;
+            left: 207px;
             width: 0px;
             height: 0px;
             border-style: solid;
