Style embedded youtube videos

--- a/sites/all/themes/rebound/sass/_main.scss
+++ b/sites/all/themes/rebound/sass/_main.scss
@@ -52,6 +52,12 @@ a
     {
         margin-left: 20px;
     }
+    
+    iframe
+    {
+        max-width: 100%;
+        display: block;
+    }
 }
 
 .page-wrapper
