--- a/sites/all/themes/rebound/sass/_main.scss
+++ b/sites/all/themes/rebound/sass/_main.scss
@@ -290,6 +290,7 @@ body.contact-us
             float: none;
             background-position: top left;
             background-image: url(../img/icon-white-address.png);
+            cursor: pointer;
             
             &.left
             {
