Class for 2 columns, except on mobile

--- a/sites/all/themes/rebound/sass/_main.scss
+++ b/sites/all/themes/rebound/sass/_main.scss
@@ -550,3 +550,10 @@ ul.donors
         background: url(../img/chevron-right.png) no-repeat left center;
     }
 }
+
+.two-columns
+{
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2;
+}
