--- a/sites/all/themes/rebound/sass/_responsive.scss
+++ b/sites/all/themes/rebound/sass/_responsive.scss
@@ -861,7 +861,8 @@
         }
     }
     
-    ul.donors
+    ul.donors,
+    .two-columns
     {
         -webkit-column-count: auto;
         -moz-column-count: auto;
