Decrease font weight in main menu
close #58

--- a/sites/all/themes/rebound/sass/_header.scss
+++ b/sites/all/themes/rebound/sass/_header.scss
@@ -225,7 +225,7 @@
             width: 100%;
             line-height: 0.9;
             color: white;
-            font-weight: bold;
+            font-weight: 500;
         }
     }
 }
