--- a/sites/all/themes/rebound/sass/_header.scss
+++ b/sites/all/themes/rebound/sass/_header.scss
@@ -175,6 +175,17 @@
             position: relative;
             top: 3px;
         }
+        a.donate
+        {
+            font-size: 1em;
+            line-height: 33px;
+            width: auto;
+            height: auto;
+            color: white;
+            padding-right: 12px;
+            margin-top: -3px;
+            text-transform: uppercase;
+        }
         .facebook
         {
             background-image: url(../img/fb.png);
