Link the news image on home page to the article page
close #60

--- a/sites/all/themes/rebound/sass/_responsive.scss
+++ b/sites/all/themes/rebound/sass/_responsive.scss
@@ -743,10 +743,11 @@
     .view-secondary-circles,
     .view-secondary-circles.view-display-id-block
     {
-        .views-field-field-image img
+        .views-field-field-image
         {
             float: none;
             margin: 0 auto;
+            text-align: center;
         }
         
         .views-field-nothing
