--- a/sites/all/themes/rebound/sass/_views.scss
+++ b/sites/all/themes/rebound/sass/_views.scss
@@ -196,7 +196,13 @@
         font-weight: bold;
         font-size: 0.9em;
         position: relative;
-        z-index: 1;
+        z-index: 2;
+        
+        a
+        {
+            text-decoration: none;
+            color: white;
+        }
         
         .read-more
         {
@@ -219,7 +225,7 @@
         max-width: 180px;
         padding-bottom: 3px;
         position: relative;
-        z-index: 1;
+        z-index: 2;
         text-shadow: 0 0 10px rgba(0,0,0, 0.8);
     }
     
@@ -231,20 +237,31 @@
         width: 230px;
         height: 230px;
         border-radius: 115px;
+        z-index: 1;
         
         behavior: url(/sites/all/themes/rebound/css/PIE.htc);
     }
     
-    .views-field-path a
+    .views-field-path
     {
         position: absolute;
         left: 0;
         top: 0;
         width: 100%;
         height: 100%;
-        z-index: 2;
-        text-decoration: none;
-        font-size: 0;
+        z-index: 4;
+        
+        a
+        {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 4;
+            text-decoration: none;
+            font-size: 0;
+        }
     }
 }
 
