--- a/sites/all/themes/rebound/sass/_responsive.scss
+++ b/sites/all/themes/rebound/sass/_responsive.scss
@@ -396,6 +396,13 @@
                 vertical-align: top;
                 margin-left: 16px;
                 
+                &.donate
+                {
+                    width: auto;
+                    margin: 0 -15px 0 0;
+                    line-height: 40px;
+                    padding: 0 10px;
+                }
                 &.facebook
                 {
                     background-image: url(../img/icon-facebook-large.png);
