--- a/sites/all/themes/rebound/sass/_footer.scss
+++ b/sites/all/themes/rebound/sass/_footer.scss
@@ -18,7 +18,7 @@
     {
         color: white;
         text-decoration: none;
-        font-weight: bold;
+        font-weight: 500;
         
         &:hover, &:focus
         {
@@ -128,7 +128,7 @@
         width: 155px;
         line-height: 33px;
         padding: 0 0 0 22px;
-        font-size: 0.8em;
+        font-size: 0.825em;
         text-align: right;
         z-index: 1;
         background-position: left center;
@@ -186,7 +186,6 @@
         top: 33px;
         background-color: $blue-light;
         background-image: url(../img/icon-phone.png);
-        font-weight: bold;
         
         &:before
         {
