--- a/sites/all/themes/rebound/sass/_header.scss
+++ b/sites/all/themes/rebound/sass/_header.scss
@@ -16,7 +16,7 @@
     {
         color: white;
         text-decoration: none;
-        font-weight: bold;
+        font-weight: 500;
     }
     
     .logo
@@ -74,7 +74,7 @@
         width: 155px;
         line-height: 33px;
         padding: 0 0 0 22px;
-        font-size: 0.8em;
+        font-size: 0.825em;
         text-align: right;
         background-position: left center;
         background-repeat: no-repeat;
@@ -136,7 +136,6 @@
         top: 33px;
         background-color: $blue-dark;
         background-image: url(../img/icon-phone.png);
-        font-weight: bold;
         
         &:before
         {
