--- a/sites/all/themes/rebound/sass/_views.scss
+++ b/sites/all/themes/rebound/sass/_views.scss
@@ -227,6 +227,8 @@
         position: relative;
         z-index: 2;
         text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+        filter: glow(color=#FF000000,strength=2);
+        zoom: 1;
     }
     
     .views-field-field-image img
