--- a/sites/all/themes/rebound/sass/_views.scss
+++ b/sites/all/themes/rebound/sass/_views.scss
@@ -538,7 +538,6 @@
     .views-field-the-rest
     {
         position: relative;
-        font-weight: bold;
         
         &:before
         {
@@ -558,6 +557,12 @@
             background: $blue-navy;
             overflow: hidden;
             padding: 15px;
+        }
+        
+        img
+        {
+            max-width: 100%;
+            height: auto !important;
         }
     }
     
