fix the layout of the responsive footer logos with the larger imagine canada image

--- a/sites/all/themes/rebound/sass/_responsive.scss
+++ b/sites/all/themes/rebound/sass/_responsive.scss
@@ -238,7 +238,14 @@
         .logos
         {
             top: 20px;
-            right: 160px;
+            right: 175px;
+            text-align: center;
+            
+            img
+            {
+                max-height: 50px;
+                width: auto !important;
+            }
         }
         .site-by-cci
         {
